--- a/react/src/app/partners/style.css
+++ b/react/src/app/partners/style.css
@@ -14,21 +14,32 @@
      
 }
 
-.walk{
+.selected{
     background-color: #FFC82D;
     width: 195px;
 }
 
-.call{
+.notselected{
     background-color: white;
     width: 195px;
 }
 
+.list{
+    display: flex;
+    
+}
+
 .user{
+    display: flex;
+    margin-bottom: 10px;
+}
+
+.users{
     position: absolute;
     top: 20%;
     left: 25%;
     display: flex;
+    flex-direction: column;
 }
 .profilepic{
     margin: 10px;
