--- a/react/src/app/partners/style.css
+++ b/react/src/app/partners/style.css
@@ -35,11 +35,10 @@
 }
 
 .users{
-    position: absolute;
-    top: 20%;
-    left: 25%;
     display: flex;
     flex-direction: column;
+    position: relative;
+    top: 100px; 
 }
 .profilepic{
     margin: 10px;
@@ -57,4 +56,11 @@
     background-color: rgba(255,255,255, 0.15);
     width: 260px;
     color: #fff;
+}
+
+.back-btn{
+    color: white;
+    position: absolute;
+    left: 25%;
+    top: 3%;
 }
